<resources>
    <string name="app_name">Price_report_16</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="exchange">Exchange Rate</string>
    <string name="bid">Bid Price</string>
    <string name="ask">Ask Price</string>
    <string name="refresh">Last Refresh</string>
    <string name="base">Base</string>
    <string name="usd">USD</string>
    <string name="date">Date  </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="high">High</string>
    <string name="low">Low</string>
</resources>